# synth-match

./: .gitignore  README.md  debug_runner.py  intel_environment.txt  meta_scripts.py  poetry.toml  pyproject.toml
backend-api/: README.md  additional_packages.txt  app.py  initialize.py  periodic_API_sends.py  periodic_update.py  trials.ipynb
backend-api/configs/: synth_parameter_mapping.yaml  train_end_to_end.yaml
documentation/obsidian-synth-match/: API Definitions.md  Functional Architecture Diagram.md  Tasks.md  Training validation UI.md
documentation/obsidian-synth-match/.obsidian/: workspace.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: ADSRChart.vue  (+5 more)
notebooks/: audio_exploration.ipynb  synthesizer_environment.ipynb  test_trained_model.ipynb  train_end_to_end.yaml
saved_models/agent/: actor_weights.h5  critic_weights.h5  critic_weights.h5_1.h5  critic_weights.h5_2.h5
saved_models/end_to_end/: actor_weights.h5
scripts/: convert_hdf5_to_tfrecords.py  generate_synth_data.py  pretrain_actor.py  train_agent.py  train_end_to_end.py  train_model.py  train_observer.py  train_observer_live.py
scripts/configs/: config_end_to_end.yaml  pretrain_actor.yaml  train_agent.yaml  train_end_to_end.yaml  train_observer.yaml
src/: environment.py
src/agents/: __init__.py  _base_agent.py  actor_critic_agent.py  base_agent.py  td3_agent.py
src/environment/: environment.py  plots.py  render_functions.py  reward_functions.py
src/environments/: base_synth_env.py  super_simple_synth_env.py  synth_a_env.py
src/observers/: __init__.py  _base_observer.py  observers.py  parameter_observer.py  spectrogram_observer.py  waveform_observer.py
src/synthesizers/: __init__.py  _base_synth.py  base_synth.py  host.py  simple_synth.py  super_simple_synth.py  synth_a.py
src/utils/: audio_processor.py  config_manager.py  math.py  observers.py  plotting.py  replay_buffer.py  reward_functions.py
(+39 files in other folders)
