[tool.poetry]
name = "synth-match"
version = "0.1.0"
description = "Sound-synth preset matchin using RL"
authors = ["Job van Zijl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pyaudio = "^0.2.14"
black = "^24.3.0"
pygame = "^2.5.2"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
