[tool.poetry]
name = "synth-match"
version = "0.1.0"
description = "Sound-synth preset matchin using RL"
authors = ["Job van Zijl"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12" # python versions that satisfy both matplotlib and TF
numpy = "^1.26.4"
black = "^24.3.0"
scipy = "^1.12.0"
tensorflow-io-gcs-filesystem = "0.31.0" # trying to use any newer version failed
tensorflow = "^2.16.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
